fix spacing for awards

--- a/app/states/root/section-state/_section-state_styles.scss
+++ b/app/states/root/section-state/_section-state_styles.scss
@@ -353,6 +353,18 @@
 	}
 }
 
+.awards
+{
+	.alt-project-metadata
+	{
+		margin-top: 0;
+	}
+	.alt-project-title
+	{
+		margin-bottom: 0;
+	}
+}
+
 .alt-index-expand
 {
 	position: absolute;
